--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
          <meta charset="UTF-8" /> 
          <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
          <title>Coolors - Color Palette Generator</title> 
-         <link rel="stylesheet" href="./style.css" /> 
+         <link rel="stylesheet" href="
+         style.css" /> 
          <link 
              href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" 
              rel="stylesheet" 
@@ -279,6 +280,6 @@
              </div> 
          </div> 
   
-         <script src="./app.js"></script> 
+         <script src="script.js"></script> 
      </body> 
                        </html>
